[package]
name = "rweb-common"
version = "0.1.0"
edition = "2024"

[features]
default = []
p2p = []

[dependencies]
tokio = {version = "*",default-features = false,features = ["io-util","net"]}
url = {version = "*"}
serde = {version = "*",features = ["derive"]}

[dev-dependencies]
serde_json = {version = "*"}
