[lib]
name = "rwebc"
crate-type = ["cdylib"] 

[package]
name = "rwebc"
version = "0.1.0"
edition = "2024"

[features]
default = []
log = []
p2ptest = []
p2p = ["common/p2p"]

[dependencies]
tokio = {version = "1.44.2",default-features = false, features = ["rt","rt-multi-thread","time","io-util","net","macros"]}
quinn = {version = "0.11.7",default-features = false, features = ["rustls-ring","runtime-tokio"]}
rustls = {version = "*"}
tokio-rustls = {version = "0.26.2"}
common = { path = "../common" }
url = "*"
once_cell = "*"
serde_json = {version = "*"}
futures = {version = "*"}

[dev-dependencies]
tokio = {version = "1.44.2", features = ["macros"]}
bytes = "*"