[package]
name = "rwebc"
version = "0.1.0"
edition = "2024"

[features]
default = []
log = []
p2ptest = []
p2p = ["rweb-common/p2p"]

[dependencies]
tokio = {version = "*",default-features = false, features = ["rt","rt-multi-thread","time","io-util","net","macros"]}
quinn = {version = "*",default-features = false, features = ["rustls-ring","runtime-tokio"]}
rustls = {version = "*"}
tokio-rustls = {version = "*"}
rweb-common = { path = "../rweb-common" }
url = "*"
once_cell = "*"
#serde_json = {version = "*"}
futures = {version = "*"}

[dev-dependencies]
tokio = {version = "1.45.0", features = ["macros"]}
bytes = "*"