[package]
name = "rwebs"
version = "0.1.0"
edition = "2024"

[features]
default = []
p2p = ["common/p2p"]

[dependencies]
tokio = {version = "*",features = ["rt","macros","rt-multi-thread","sync","io-util","net"] }
tokio-rustls = {version = "0.26.2"}
simple_logger = "*"
log = "*"
clap = {version = "*", features = ["derive"] }
quinn = {version = "0.11.7",default-features = false,features = ["rustls-ring","runtime-tokio"]}
rustls = "*"
common = { path = "../common" }
url = "*"

# console-subscriber = "0.4.1"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
